Actualización en conversor.html: ajustes en funcionalidad

--- a/pages/conversor.html
+++ b/pages/conversor.html
@@ -10,7 +10,7 @@
     <h1>Convertir Palabras a Número</h1>
     <form id="conversionForm">
         <label for="inputTexto">Introduce el precio en palabras:</label>
-        <input type="text" id="inputTexto" placeholder="Habla o escribe aquí" readonly>
+        <input type="text" id="inputTexto" placeholder="Habla o escribe aquí" >
         <button type="button" id="startVoice">🎤 Hablar</button>
         <button type="submit">Convertir</button>
     </form>
