--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles/estilos.css">
 </head>
 <body>
+    <img src="images/imagIA.jpeg" alt="Imagen de prueba" style="max-width: 350px; border-radius: 8px;" />
+    <h1>Enekus Core Mechanic Mind</h1>
     <a href="pages/conversor.html"><h1>Convertir Palabras a Número</h1></a>
     <a href="pages/rickmorty.html"><h1>Genera un Rick o un Morty</h1></a>
+    <a href="pages/mensaje.html"><h1>Esta página te mostrará un bonito mensaje</h1></a>
 
     </body>
 </html>
