boton de atras en todas las paginas

--- a/pages/mensaje.html
+++ b/pages/mensaje.html
@@ -31,6 +31,8 @@
     </div>
     <button id="boton">Haz clic para leer tu mensaje bonico</button>
   </main>
+  <button id="btn-atras" onclick="window.location.href='index.html'">Atrás</button>
+
   <script src="../js/mensaje.js"></script>
 </body>
 </html>
