--- a/pages/conversor.html
+++ b/pages/conversor.html
@@ -15,7 +15,7 @@
         <button type="submit">Convertir</button>
     </form>
     <p id="resultado"></p>
-<button id="btn-atras" onclick="window.location.href='index.html'">Atrás</button>
+<button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
 <script src="../js/main.js"></script>
 </body>
 </html>
