--- a/pages/mensaje.html
+++ b/pages/mensaje.html
@@ -31,7 +31,7 @@
     </div>
     <button id="boton">Haz clic para leer tu mensaje bonico</button>
   </main>
-  <button id="btn-atras" onclick="window.location.href='index.html'">Atrás</button>
+  <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
 
   <script src="../js/mensaje.js"></script>
 </body>
