--- a/pages/rickmorty.html
+++ b/pages/rickmorty.html
@@ -66,7 +66,7 @@
       <button id="download-btn">Descargar JPG</button>
     </div>
   </div>
-  <button id="btn-atras" onclick="window.location.href='index.html'">Atrás</button>
+  <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
 
   <script src="../js/apiricks.js"></script>
 </body>
