enlace a nueva pagina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="pages/conversor.html"><h1>Convertir Palabras a Número</h1></a>
     <a href="pages/rickmorty.html"><h1>Genera un Rick o un Morty</h1></a>
     <a href="pages/mensaje.html"><h1>Esta página te mostrará un bonito mensaje</h1></a>
+    <a href="pages/transcriptor.html"><h1>Esta página te mostrará lo que capte tu micrófono</h1></a>
 
     </body>
 </html>
