--- a/pages/transcriptor.html
+++ b/pages/transcriptor.html
@@ -9,10 +9,9 @@
 <body>
     <h1>Convertir Palabras a Número</h1>
     <form id="conversionForm">
-        <label for="inputTexto">Introduce el precio en palabras:</label>
-        <input type="text" id="inputTexto" placeholder="Habla o escribe aquí" >
+        <label for="inputTexto">¡Activa el micrófono y empieza a hablar!:</label>
+        <input type="text" id="inputTexto" placeholder="Pulsa el botón y di algo" >
         <button type="button" id="startVoice">🎤 Hablar</button>
-        <button type="submit">Convertir</button>
     </form>
     <p id="resultado"></p>
 <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
