--- a/pages/transcriptor.html
+++ b/pages/transcriptor.html
@@ -15,6 +15,6 @@
     </form>
     <p id="resultado"></p>
 <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
-<script src="../js/main.js"></script>
+<script src="../js/transcriptor.js"></script>
 </body>
 </html>
