--- a/pages/mensaje.html
+++ b/pages/mensaje.html
@@ -2,23 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generador de Rick o Morty</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 20px; }
-    #modal {
-      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.7); justify-content: center; align-items: center;
-    }
-    #modal-content {
-      background: #fff; padding: 20px; border-radius: 8px; position: relative;
-      max-width: 90%; width: 300px;
-    }
-    #modal img { width: 100%; border-radius: 8px; }
-    #close-btn { position: absolute; top: 10px; right: 10px; cursor: pointer; }
-    label, input, select { display: block; margin: 5px auto; }
-  </style>
-      <link rel="stylesheet" href="../styles/mensaje.css">
-
+  <link rel="stylesheet" href="../styles/mensaje.css">
 </head>
 
 <body>
