--- a/pages/rickmorty.html
+++ b/pages/rickmorty.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generador de Rick o Morty</title>
   <style>
     body { font-family: sans-serif; text-align: center; padding: 20px; }
