--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convertir Palabras a Número</title>
+    <title>Enekus Core Mechanic Mind</title>
     <link rel="stylesheet" href="styles/estilos.css">
 </head>
 <body>
+
     <img src="images/imagIA.jpeg" alt="Imagen de prueba" class="image-style" />
     <h1>Enekus Core Mechanic Mind</h1>
-    <a href="pages/conversor.html"><h1>Convertir Palabras a Número</h1></a>
-    <a href="pages/rickmorty.html"><h1>Genera un Rick o un Morty</h1></a>
-    <a href="pages/mensaje.html"><h1>Esta página te mostrará un bonito mensaje</h1></a>
-    <a href="pages/transcriptor.html"><h1>Esta página te mostrará lo que capte tu micrófono</h1></a>
 
-    </body>
+    <div class="container" onclick="this.classList.toggle('open')">
+        <h1>Opciones</h1>
+        <div class="content">
+            <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número</div></a>
+            <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
+            <a href="pages/mensaje.html"><div class="item">Mostrar Bonito Mensaje</div></a>
+            <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
+        </div>
+    </div>
+
+</body>
 </html>
