--- a/pages/transcriptor.html
+++ b/pages/transcriptor.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convertir Palabras a Número</title>
-    <link rel="stylesheet" href="../styles/estilos.css">
+    <link rel="stylesheet" href="../styles/transcriptor.css">
 </head>
 <body>
-    <h1>Convertir Palabras a Número</h1>
+    <h1>Transcriptor</h1>
     <form id="conversionForm">
+        <div class="container-description">
+            <h2>Descripción</h2>
+            <p>Esta herramienta convierte tu voz en texto. Simplemente haz clic en el botón de grabación y empieza a hablar.</p>
+            <br>
+            <p>Si quieres usar el resultado puedes copiarlo en el portapapeles y pegarlo en cualquier parte.</p>
+        </div>
         <label for="inputTexto">¡Activa el micrófono y empieza a hablar!:</label>
         <input type="text" id="inputTexto" placeholder="Pulsa el botón y di algo" >
         <button type="button" id="startVoice">🎤 Hablar</button>
