--- a/pages/transcriptor.html
+++ b/pages/transcriptor.html
@@ -16,9 +16,11 @@
             <p>Si quieres usar el resultado puedes copiarlo en el portapapeles y pegarlo en cualquier parte.</p>
         </div>
         <label for="inputTexto">¡Activa el micrófono y empieza a hablar!:</label>
-        <input type="text" id="inputTexto" placeholder="Pulsa el botón y di algo" >
         <button type="button" id="startVoice">🎤 Hablar</button>
     </form>
+    <div class="container-description">
+        <h2>Resultado</h2>
+        <p>El resultado de tu voz se mostrará aquí:</p> <br>
     <p id="resultado"></p>
 <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
 <script src="../js/transcriptor.js"></script>
