--- a/pages/transcriptor.html
+++ b/pages/transcriptor.html
@@ -22,7 +22,7 @@
         <h2>Resultado</h2>
         <p>El resultado de tu voz se mostrará aquí:</p> <br>
         <p id="resultado"></p>
-        <div id="loadingIcon" style="display: none;">🎤 Procesando...</div> <!-- Ícono de carga -->
+        <div id="loadingIcon" >🎤 Procesando...</div> <!-- Ícono de carga -->
     </div>
 <button id="btn-atras" onclick="window.location.href='../index.html'">Atrás</button>
 <script src="../js/transcriptor.js"></script>
