--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container" onclick="this.classList.toggle('open')">
         <h1>Opciones</h1>
         <div class="content">
-            <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número</div></a>
-            <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
             <a href="pages/mensaje.html"><div class="item">Mostrar Bonito Mensaje</div></a>
             <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
+            <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
+            <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
         </div>
     </div>
 
