--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
         </div>
     </div>
+    <div id="sidebar">
+        <button id="toggleMenu">☰ Menú</button>
+        <div id="menuContent">
+            <h2>Mapa Web</h2>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="pages/mensaje.html">Mostrar Bonito Mensaje</a></li>
+                <li><a href="pages/transcriptor.html">Transcriptor de Voz</a></li>
+                <li><a href="pages/rickmorty.html">Genera un Rick o un Morty</a></li>
+                <li><a href="pages/conversor.html">Convertir Palabras a Número</a></li>
+            </ul>
+        </div>
+    </div>
+    <script src="js/menu.js"></script>
 
 </body>
 </html>
