--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="styles/estilos.css">
 </head>
 <body>
-
-    <img src="images/imagIA.jpeg" alt="Imagen de prueba" class="image-style" />
-    <h1>Enekus Core Mechanic Mind</h1>
-
+    <div class="title">Enekus Core Mechanic Mind</div>
+    <div class="description">
+        <h2>Descripción</h2>
+        <p>Esta es una página de prueba para mostrar diferentes opciones de herramientas que he creado.</p>
+        <p>Haz clic en el botón del menú para ver las opciones disponibles.</p>
+    </div>
+     <div class="img-container">
+        <div class="emo-title">Caminando al horizonte</div>
+        <img src="images/imagIA.jpeg" alt="Imagen de prueba" class="image-style" />
+    </div>
     <div class="container" onclick="this.classList.toggle('open')">
         <h1>Opciones</h1>
         <div class="content">
