prueba de emailjs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
             </ul>
         </div>
     </div>
-    <script src="js/menu.js"></script>
+    <script src="js/menu.js"></script><div class="email-form">
+        <button id="showForm">Escribir Mensaje</button>
+        <div id="formContainer" style="display: none;">
+            <textarea id="messageBox" placeholder="Escribe tu mensaje aquí"></textarea>
+            <button id="sendEmail">Enviar</button>
+        </div>
+    </div>
+    </div>
+    <script src="js/email.js"></script>
 
 </body>
 </html>
