pagina email separada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
             <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
-        </div>
+            <a href="pages/email.html"><div class="item">Email a Enekus</div></a>
     </div>
 
     <div id="sidebar">
@@ -43,22 +43,11 @@
                 <li><a href="pages/transcriptor.html">Transcriptor de Voz</a></li>
                 <li><a href="pages/rickmorty.html">Genera un Rick o un Morty</a></li>
                 <li><a href="pages/conversor.html">Convertir Palabras a Número</a></li>
+                <li><a href="pages/email.html">Email a Enekus</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="email-form">
-        <h2>Enviar un Mensaje a Eneko</h2>
-        <p>Si quieres decirme algo, puedes escribir un mensaje aquí ¡Es anónimo!</p>
-        <button id="showForm">Escribir Mensaje</button>
-        <div id="formContainer" style="display: none;">
-            <textarea id="messageBox" placeholder="Escribe tu mensaje aquí"></textarea>
-            <button id="sendEmail">Enviar</button>
-        </div>
-    </div>
 
-    <!-- Scripts: primero los que no dependen de otros -->
-    <script src="js/menu.js"></script>
-    <script src="js/email.js"></script>
 </body>
 </html>
