--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
             <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
-            <a href="pages/email.html"><div class="item">Email a Enekus</div></a>
+            <a href="pages/email.html"><div class="item">Envía un mensaje a Enekus</div></a>
     </div>
 
     <div id="sidebar">
