--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
             <a href="pages/email.html"><div class="item">Envía un mensaje a Enekus</div></a>
     </div>
-
+<div></div>
     <div id="sidebar">
         <button id="toggleMenu">☰ Menú</button>
         <div id="menuContent">
