--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enekus Core Mechanic Mind</title>
-    <link rel="stylesheet" href="styles/estilos.css">
+    <link rel="stylesheet" href="styles/index.css">
 
     <!-- EmailJS actualizado -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -31,8 +31,9 @@
             <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
             <a href="pages/email.html"><div class="item">Envía un mensaje a Enekus</div></a>
+        </div>
     </div>
-<div></div>
+
     <div id="sidebar">
         <button id="toggleMenu">☰ Menú</button>
         <div id="menuContent">
@@ -48,6 +49,7 @@
         </div>
     </div>
 
-
+    <!-- Enlace al archivo menu.js -->
+    <script src="js/menu.js"></script>
 </body>
 </html>
