--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     <div id="sidebar">
         <button id="toggleMenu">☰ Menú</button>
         <div id="menuContent">
-            <h2>Mapa Web</h2>
+            <h2 class="title-menu">Mapa Web</h2>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="pages/mensaje.html">Mostrar Bonito Mensaje</a></li>
                 <li><a href="pages/transcriptor.html">Transcriptor de Voz</a></li>
                 <li><a href="pages/rickmorty.html">Genera un Rick o un Morty</a></li>
                 <li><a href="pages/conversor.html">Convertir Palabras a Número</a></li>
-                <li><a href="pages/email.html">Email a Enekus</a></li>
+                <li><a href="pages/email.html" class="email">Email a Enekus</a></li>
             </ul>
         </div>
     </div>
