--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="pages/transcriptor.html">Transcriptor de Voz</a></li>
                 <li><a href="pages/rickmorty.html">Genera un Rick o un Morty</a></li>
                 <li><a href="pages/conversor.html">Convertir Palabras a Número</a></li>
-                <li><a href="pages/email.html" class="email">Email a Enekus</a></li>
+                <li><a href="pages/email.html" class="email">Mensaje a Enekus</a></li>
             </ul>
         </div>
     </div>
