--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container" onclick="this.classList.toggle('open')">
         <h1>Opciones</h1>
         <div class="content">
+            <a href="pages/clickcirculo.html"><div class="item">Mostrar Bonito Mensaje</div></a>
             <a href="pages/mensaje.html"><div class="item">Mostrar Bonito Mensaje</div></a>
             <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
             <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
