pagina con contraseña

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h1>Opciones</h1>
         <div class="content">
             <a href="pages/emojis.html"><div class="item">Juego emojis</div></a>
+            <a href="pages/pass.html"><div class="item">Página con clave</div></a>
             <a href="pages/clickcirculo.html"><div class="item">Juego tiempo reacción</div></a>
             <a href="pages/mensaje.html"><div class="item">Mostrar Bonito Mensaje</div></a>
             <a href="pages/transcriptor.html"><div class="item">Transcriptor de Voz</div></a>
