--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="pages/rickmorty.html"><div class="item">Genera un Rick o un Morty</div></a>
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
             <a href="pages/email.html"><div class="item">Envía un mensaje a Enekus</div></a>
+            <a href="pages/mediapipe.html"><div class="item">Detección de Manos (MediaPipe)</div></a>
         </div>
     </div>
 
@@ -43,11 +44,15 @@
             <h2 class="title-menu">Mapa Web</h2>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="pages/emojis.html">Juego emojis</a></li>
+                <li><a href="pages/pass.html">Página con clave</a></li>
+                <li><a href="pages/clickcirculo.html">Juego tiempo reacción</a></li>
                 <li><a href="pages/mensaje.html">Mostrar Bonito Mensaje</a></li>
                 <li><a href="pages/transcriptor.html">Transcriptor de Voz</a></li>
                 <li><a href="pages/rickmorty.html">Genera un Rick o un Morty</a></li>
-                <li><a href="pages/conversor.html">Convertir Palabras a Número</a></li>
-                <li><a href="pages/email.html" class="email">Mensaje a Enekus</a></li>
+                <li><a href="pages/conversor.html">Convertir Palabras a Número, en construcción</a></li>
+                <li><a href="pages/email.html">Envía un mensaje a Enekus</a></li>
+                <li><a href="pages/mediapipe.html">Detección de Manos (MediaPipe)</a></li>
             </ul>
         </div>
     </div>
