--- a/pages/mediapipe.html
+++ b/pages/mediapipe.html
@@ -28,46 +28,6 @@
     </button>
   </main>
 
-  <script>
-    const videoElement = document.getElementById('camera');
-    const canvasElement = document.getElementById('output');
-    const canvasCtx = canvasElement.getContext('2d');
-
-    // Configurar MediaPipe Hands
-    const hands = new Hands({
-      locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`,
-    });
-    hands.setOptions({
-      maxNumHands: 1,
-      modelComplexity: 1,
-      minDetectionConfidence: 0.5,
-      minTrackingConfidence: 0.5,
-    });
-
-    hands.onResults((results) => {
-      canvasCtx.save();
-      canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
-      canvasCtx.drawImage(
-        results.image, 0, 0, canvasElement.width, canvasElement.height
-      );
-      if (results.multiHandLandmarks) {
-        for (const landmarks of results.multiHandLandmarks) {
-          drawConnectors(canvasCtx, landmarks, HAND_CONNECTIONS, {color: '#00FF00', lineWidth: 5});
-          drawLandmarks(canvasCtx, landmarks, {color: '#FF0000', lineWidth: 2});
-        }
-      }
-      canvasCtx.restore();
-    });
-
-    // Configurar cámara
-    const camera = new Camera(videoElement, {
-      onFrame: async () => {
-        await hands.send({image: videoElement});
-      },
-      width: 480,
-      height: 240,
-    });
-    camera.start();
-  </script>
+  <script src="../js/mediapipe.js"></script>
 </body>
 </html>
