--- a/pages/mediapipe.html
+++ b/pages/mediapipe.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Generador de Rick o Morty</title>
+  <link rel="stylesheet" href="../styles/mediapipe.css">
   <link rel="stylesheet" href="../styles/mensaje.css">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
