--- a/pages/mediapipe.html
+++ b/pages/mediapipe.html
@@ -17,8 +17,8 @@
   </header>
   <main>
     <div class="camera-container">
-      <video class="input_video" id="camera" width="480px" height="320px"></video>
-      <canvas class="output_canvas" width="480px" height="320px"></canvas>
+      <video class="input_video" id="camera" autoplay playsinline></video>
+      <canvas class="output_canvas"></canvas>
     </div>
     <button id="btn-atras" class="btn-atras" onclick="window.location.href='../index.html'">
       &#x1F3E0; <!-- Ícono de casa -->
