--- a/pages/mediapipe.html
+++ b/pages/mediapipe.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <div class="camera-container">
-      <video class="input_video" id="camera" autoplay playsinline></video>
+      <video class="input_video" id="camera" style="display: none;"></video>
       <canvas class="output_canvas"></canvas>
     </div>
     <button id="btn-atras" class="btn-atras" onclick="window.location.href='../index.html'">
