--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container" onclick="this.classList.toggle('open')">
         <h1>Opciones</h1>
         <div class="content">
+            <a href="pages/emociones.html"><div class="item">Detector emociones</div></a>
             <a href="pages/emojis.html"><div class="item">Juego emojis</div></a>
             <a href="pages/pass.html"><div class="item">Página con clave</div></a>
             <a href="pages/clickcirculo.html"><div class="item">Juego tiempo reacción</div></a>
@@ -45,6 +46,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="pages/emojis.html">Juego emojis</a></li>
+                <li><a href="pages/emociones.html">Detector emocione</a></li>
                 <li><a href="pages/pass.html">Página con clave</a></li>
                 <li><a href="pages/clickcirculo.html">Juego tiempo reacción</a></li>
                 <li><a href="pages/mensaje.html">Mostrar Bonito Mensaje</a></li>
