--- a/pages/emociones.html
+++ b/pages/emociones.html
@@ -2,16 +2,18 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detector de Emociones</title>
-  <link rel="stylesheet" href="../styles/generadorImg.css">
+  <link rel="stylesheet" href="../styles/emociones.css">
 </head>
 <body>
   <h1>Detector de emociones</h1>
   <video id="video" autoplay muted></video>
   <canvas id="overlay"></canvas>
   <p id="emotion">Emoción: Detectando...</p>
+  <a href="../index.html" class="btn-atras">Volver</a>
 
   <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
-  <script defer src="../js/generadorImg.js"></script>
+  <script defer src="../js/emociones.js"></script>
 </body>
 </html>
