--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="pages/conversor.html"><div class="item">Convertir Palabras a Número, en construcción</div></a>
             <a href="pages/email.html"><div class="item">Envía un mensaje a Enekus</div></a>
             <a href="pages/mediapipe.html"><div class="item">Detección de Manos (MediaPipe)</div></a>
+            <a href="pages/mpcuerpo.html"><div class="item">Detección de Cuerpo (MediaPipe)</div></a>
         </div>
     </div>
 
@@ -55,6 +56,7 @@
                 <li><a href="pages/conversor.html">Convertir Palabras a Número, en construcción</a></li>
                 <li><a href="pages/email.html">Envía un mensaje a Enekus</a></li>
                 <li><a href="pages/mediapipe.html">Detección de Manos (MediaPipe)</a></li>
+                <li><a href="pages/mpcuerpo.html">Detección de Cuerpo (MediaPipe)</a></li>
             </ul>
         </div>
     </div>
