--- a/index.html
+++ b/index.html
@@ -39,7 +39,83 @@
             <a href="pages/mpcuerpo.html"><div class="item">Detección de Cuerpo (MediaPipe)</div></a>
         </div>
     </div>
-
+<div class="container">
+    <h1>Opciones</h1>
+    <div class="cards">
+        <div class="card">
+            <img src="images/emociones.jpg" alt="Detector emociones">
+            <h3>Detector emociones</h3>
+            <p>Detecta emociones a través de expresiones faciales.</p>
+            <a href="pages/emociones.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/emojis.jpg" alt="Juego emojis">
+            <h3>Juego emojis</h3>
+            <p>Un divertido juego para identificar emojis.</p>
+            <a href="pages/emojis.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/pass.jpg" alt="Página con clave">
+            <h3>Página con clave</h3>
+            <p>Accede a una página protegida con contraseña.</p>
+            <a href="pages/pass.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/clickcirculo.jpg" alt="Juego tiempo reacción">
+            <h3>Juego tiempo reacción</h3>
+            <p>Prueba tus reflejos con este juego de reacción.</p>
+            <a href="pages/clickcirculo.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/mensaje.jpg" alt="Mostrar Bonito Mensaje">
+            <h3>Mostrar Bonito Mensaje</h3>
+            <p>Descubre un mensaje especial y motivador.</p>
+            <a href="pages/mensaje.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/transcriptor.jpg" alt="Transcriptor de Voz">
+            <h3>Transcriptor de Voz</h3>
+            <p>Convierte tu voz en texto fácilmente.</p>
+            <a href="pages/transcriptor.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/rickmorty.jpg" alt="Genera un Rick o un Morty">
+            <h3>Genera un Rick o un Morty</h3>
+            <p>Genera personajes de Rick y Morty al azar.</p>
+            <a href="pages/rickmorty.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/conversor.jpg" alt="Convertir Palabras a Número">
+            <h3>Convertir Palabras a Número</h3>
+            <p>Convierte palabras en números. (En construcción)</p>
+            <a href="pages/conversor.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/email.jpg" alt="Envía un mensaje a Enekus">
+            <h3>Envía un mensaje a Enekus</h3>
+            <p>Envía un correo electrónico directamente a Enekus.</p>
+            <a href="pages/email.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/mediapipe.jpg" alt="Detección de Manos">
+            <h3>Detección de Manos</h3>
+            <p>Detecta manos en tiempo real usando MediaPipe.</p>
+            <a href="pages/mediapipe.html" class="btn">Ir a la página</a>
+        </div>
+        <div class="card">
+            <img src="images/mpcuerpo.jpg" alt="Detección de Cuerpo">
+            <h3>Detección de Cuerpo</h3>
+            <p>Detecta el cuerpo completo usando MediaPipe.</p>
+            <a href="pages/mpcuerpo.html" class="btn">Ir a la página</a>
+        </div>
+         <div class="card">
+            <img src="images/mpfiltros.jpg" alt="Detección de Cuerpo">
+            <h3>Detección de Cuerpo + filtros</h3>
+            <p>Detecta el cuerpo completo usando MediaPipe y aplica filtros.</p>
+            <a href="pages/mpfiltros.html" class="btn">Ir a la página</a>
+        </div>
+    </div>
+</div>
     <div id="sidebar">
         <button id="toggleMenu">☰ Menú</button>
         <div id="menuContent">
