--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <div class="emo-title">Caminando al horizonte</div>
         <img src="images/imagIA.jpeg" alt="Imagen de prueba" class="image-style" />
     </div>
-
+    <div class="juego-container">
+                   <a href="pages/juego/plantilla-casa.html"><div class="item">casa juego</div></a>
+                   <a href="pages/juego/init.html"><div class="item">combate juego</div></a>
+   </div>
     <div class="container" onclick="this.classList.toggle('open')">
         <h1>Opciones</h1>
         <div class="content">
