--- a/pages/juego/plantilla-explore.html
+++ b/pages/juego/plantilla-explore.html
@@ -7,13 +7,12 @@
 </head>
 <body>
   <div id="game" class="explore-layout">
-    <aside id="actions">
-      <button onclick="toggleInventory()">Ver inventario</button>
-    </aside>
-    <main>
-      <div id="narrative">Estás explorando el lugar, mueve el ratón por la pantalla para explorar</div>
-      <div id="inventory" class="hidden"></div>
-    </main>
+    
+      <aside id="item-cards"></aside>
+<main id="explore-area">
+    <div id="narrative">Estás explorando el lugar, mueve el ratón por la pantalla para explorar</div>
+    <div id="inventory" class="hidden"></div>
+  </main>
   </div>
 
 <script type="module" src="../../js/plantilla-explore.js"></script></body>
